--- a/package.json
+++ b/package.json
@@ -9,18 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.11.1",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.74.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.4.1",
+    "lucide-react": "^0.474.0",
+    "next": "14.2.14",
+    "next-sanity": "^9.8.53",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.14"
+    "react-icons": "^5.4.0",
+    "recharts": "^2.15.1",
+    "sanity": "^3.74.1",
+    "styled-components": "^6.1.15",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.14",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.14"
+    "typescript": "^5"
   }
 }
